--- a/PowerPoint.RemoteSlideShow/Launcher/index.html
+++ b/PowerPoint.RemoteSlideShow/Launcher/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" /> 
-		<title> kjyoffice.github.io </title>
+		<title> Launcher </title>
 	</head>
 	<body>
-        <h1>kjyoffice.github.io</h1>
+        <h1>Launcher</h1>
 	</body>
 </html>
