--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html> 
-<html>
+<html lang="ko">
 	<head>
-		<meta charset="utf-8" /> 
+        	<meta charset="utf-8" />
+        	<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+	        <!-- Apple --> 
+	        <!-- https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html -->
+	        <meta name="apple-mobile-web-app-title" content="kjyoffice-github-io" />
+	        <meta name="apple-mobile-web-app-capable" content="yes" />
+	        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	        <!-- Apple -->		
+		
 		<title> kjyoffice.github.io </title>
+
+	        <!-- Apple --> 
+	        <link rel="apple-touch-icon" href="/Contents/Images/MainLogo_AppleTouchIcon.png" />
+	        <!--
+	        <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png" />
+	        <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png" />
+	        <link rel="apple-touch-icon" sizes="167x167" href="touch-icon-ipad-retina.png" />
+	        <link rel="apple-touch-startup-image" href="/launch.png" />
+	        -->
+	        <!-- Apple -->		
 	</head>
 	<body>
-        <h1>kjyoffice.github.io</h1>
+	        <h1>kjyoffice.github.io</h1>
 	</body>
 </html>
