--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<title> kjyoffice.github.io </title>
 
 	        <!-- Apple --> 
-	        <link rel="apple-touch-icon" href="/Contents/Images/MainLogo_AppleTouchIcon.png" />
+	        <link rel="apple-touch-icon" href="/AppleTouchIcon.png" />
 	        <!--
 	        <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad.png" />
 	        <link rel="apple-touch-icon" sizes="180x180" href="touch-icon-iphone-retina.png" />
