--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	        <!-- Apple --> 
 	        <!-- https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html -->
 	        <meta name="apple-mobile-web-app-title" content="kjyoffice-github-io" />
-		<meta name="apple-mobile-web-app-capable" content="no" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
 	        <!-- Apple -->		
 		
