--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	        <!-- Apple -->		
 	</head>
 	<body>
-	        <h1>kjyoffice.github.io</h1>
+		<h1 style="text-align:center;">kjyoffice.github.io</h1>
+		<h1 style="text-align:center;">Hello :-)</h1>
 	</body>
 </html>
