--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	        <!-- https://developer.apple.com/library/archive/documentation/AppleApplications/Reference/SafariWebContent/ConfiguringWebApplications/ConfiguringWebApplications.html -->
 	        <meta name="apple-mobile-web-app-title" content="kjyoffice-github-io" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	        <!-- Apple -->		
 		
 		<title> kjyoffice.github.io </title>
