--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 	        <!-- Apple -->		
 	</head>
 	<body>
-		<h1 style="text-align:center;">kjyoffice.github.io</h1>
-		<h1 style="text-align:center;">Hello :-)</h1>
+		<div>
+			<div>kjyoffice.github.io</div>
+			<div>Hello :-)</div>
+		</div>
 	</body>
 </html>
