--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 	            text-align:center;
 	            line-height:200%;
 	        }
+
+		a {
+		    color:#000000;
+		    text-decoration:none;
+		}
 	        </style>		
 	</head>
 	<body>
 	        <div id="maintitle">
-			kjyoffice.github.io<br />
-			Hello~ 😊
+			<div>kjyoffice.github.io</div>
+			<div>Hello~ 😊</div>
+			<div><a href="https://github.com/kjyoffice">Go Github</a></div>
 	        </div>
 	</body>
 </html>
