--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html> 
 <html lang="ko">
 	<head>
-        	<meta charset="utf-8" />
-        	<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title> kjyoffice.github.io </title>
-	        <style type="text/css">
-	        #maintitle {
-	            position:absolute; 
-	            left:50%; 
-	            top:50%; 
-	            transform:translate(-50%, -50%); 
-	            display:flex; 
-	            justify-content:center; 
-	            align-items:center; 
-	            font-size:2rem;
-	            font-weight:bold;
-	            text-align:center;
-	            line-height:200%;
-	        }
+		<style type="text/css">
+		#maintitle {
+			position:absolute; 
+			left:50%; 
+			top:50%; 
+			transform:translate(-50%, -50%); 
+			display:flex; 
+			flex-direction:column;
+			justify-content:center; 
+			align-items:center; 
+			font-size:2rem;
+			font-weight:bold;
+			gap:50px;
+		}
 
 		a {
-		    color:#000000;
-		    text-decoration:none;
+			color:#0000ff;
+			text-decoration:none;
 		}
-	        </style>		
+		</style>		
 	</head>
 	<body>
-	        <div id="maintitle">
-			<div>kjyoffice.github.io</div>
+		<div id="maintitle">
 			<div>Hello~ 😊</div>
-			<div><a href="https://github.com/kjyoffice">Go Github</a></div>
-	        </div>
+			<div>kjyoffice.github.io</div>
+			<div><a href="https://github.com/kjyoffice" target="_blank">🔗 Github</a></div>
+		</div>
 	</body>
 </html>
